--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <div class="container">
-        <h2 id="my-account"></h2>
+        <p class="badge badge-success">My Default Wallet Address</p>
+        <p id="my-account" class="badge badge-warning"></p>
         <div id="top-alert-green" class="alert alert-success" role="alert">
             Buy success
         </div>
-        <h1>Naruto Character List</h1>
-        <div id="character-list" class="card-list d-flex flex-wrap">
+        <h1 class="pl-1">Naruto Character List</h1>
+        <div id="character-list" class="card-list d-flex flex-wrap justify-content-center">
             <!-- <div class="card mb-3 w-20" style="max-width: 400px;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
@@ -30,13 +31,13 @@
                     </div>
                 </div>
             </div> -->
-        </div>    
-        <label class="col-lg-2 control-label">
-        Character Owner</label>    
+        </div>
+        <hr>
+        <h1 class="pl-1">Character Owner</h1>    
         <table class="table table-striped table-dark">
             <thead>
               <tr>
-                <th scope="col">#</th>
+                <th scope="col">ID</th>
                 <th scope="col">Character</th>
                 <th scope="col">Buyer Address</th>
               </tr>
@@ -332,7 +333,6 @@
             myContract.getAllCharacterList(
             (error, result) => {
                 if(!error) {
-                    $("#result").html(result.toString());
                     $.each(result, function(index, value){
                         // console.log(value.c[0])
                         myContract.getCharacterStrById(value.c[0],(error,result)=>{
@@ -340,14 +340,14 @@
                                 console.log(result)
                                 $("#character-owner").append(
                                     '<tr>'+
-                                    '<th scope="row">'+"1"+'</th>'+
+                                    '<th scope="row">'+result[0].c[0]+'</th>'+
                                     '<td>'+result[1]+'</td>'+
                                     '<td>'+result[5]+'</td>'+
                                     '</tr>'
                                 );
 
                                 $("#character-list").append(
-                                    `<div class="card m-3 w-20" style="max-width: 400px;">
+                                    `<div class="card m-1 w-20" style="max-width: 500px;">
                                         <div class="row no-gutters">
                                             <div class="col-md-4">
                                             <img src="./src/img/`+result[6]+`" class="card-img" alt="...">
@@ -370,7 +370,7 @@
                 } else
                     console.error(error);
             });
-            $("#my-account").html("My Default Wallet Address"+"<br>"+web3.eth.defaultAccount)
+            $("#my-account").html(web3.eth.defaultAccount)
         });
     </script>  
 </body>
