--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <p class="badge badge-success">My Default Wallet Address</p>
         <p id="my-account" class="badge badge-warning"></p>
-        <div id="top-alert-green" class="alert alert-success" role="alert">
-            Buy success
+        <div id="top-alert-green" class="alert alertMsg" role="alert">
+            xxxxx
         </div>
         <h1 class="pl-1">Naruto Character List</h1>
         <div id="character-list" class="card-list d-flex flex-wrap justify-content-center">
@@ -53,6 +53,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script>
+        $(".alertMsg").hide();
         if (typeof web3 !== 'undefined') {
             // this statement is executed if you are using 
             // MetaMask 
@@ -269,7 +270,7 @@
         ];
         var contract = web3.eth.contract(abi);
         var myContract = contract.at(
-            '0xc4fa7DbD3ed44c3Ed005160Cf580d21314A61040'); 
+            '0x063f01c0f4CcA494F42974FDC9e3A6ad13093752'); 
 
         // parse solidity method string
         // const abi2 = solidityToABI('getCharacterById(uint256 _id) :(Character memory character)');
@@ -279,17 +280,37 @@
             myContract.BuyCharacter();
 
         completeEvent.watch(function(error, result) {
-            if (!error){
-		//$("#result").html("Got it");               
-		if (result.args.from == 
-                   web3.eth.defaultAccount){
-                   $("#result").html("Name: " + 
-                       result.args.text + 
-                       " hashed as: " + result.args.hash); 
-               }               
+            if(!error){
+                $('.alertMsg').addClass("alert-success");
+                $('.alertMsg').text("Buy character success!!!");
+                $(".alertMsg").show().delay(5000).queue(function (n) {
+                $(this).hide(); n();});   
+            }else{
+                console.log(error.message);
             }
         });
+        
+        myContract.ErrorNotEnoughMoney().watch(function(error, result){
+            if(!error){
+                $('.alertMsg').addClass("alert-danger");
+                $('.alertMsg').text("Not enough money!!!");
+                $(".alertMsg").show().delay(5000).queue(function (n) {
+                $(this).hide(); n();});   
+            }else{
+                console.log(error.message);
+            }
+        })
 
+        myContract.ErrorCharacterNotAvailable().watch(function(error, result){
+            if(!error){
+                $('.alertMsg').addClass("alert-danger");
+                $('.alertMsg').text("This character not available!!!");
+                $(".alertMsg").show().delay(5000).queue(function (n) {
+                $(this).hide(); n();});   
+            }else{
+                console.log(error.message);
+            }
+        })
         // var errorEvent = 
         //     myContract.RegistrationError();
 
@@ -305,17 +326,24 @@
         //     }
         // });
 
-        $("#btnBuy").click(function() {
-            myContract.buyCharacter("3",
-            {
-              gas: 3000000,
-              from: web3.eth.accounts[0],
-              value: 10
-            },
-	    (error, result) => {
-                $("#top-alert-green").html(result.toString() + " error: " + error );
+        function buyFunction(_id,_price){
+            console.log("id = "+_id + " price = "+_price);
+            myContract.buyCharacter(_id,
+                {
+                    gas: 3000000,
+                    from: web3.eth.accounts[0],
+                    value: _price+1
+                },
+                (error, result) => {
+                    if(!error){
+                        $('.alertMsg').show();
+                        $('.alertMsg').addClass("alert-warning");
+                        $('.alertMsg').html(`<div class="spinner-border text-danger spinner-border-sm" role="status"></div>` + " Buy character pending");
+                    }else{
+                        console.log(error.message);
+                    }
             });
-        });
+        }
 
         $("#btnCheck").click(function() {                       
             myContract.checkName($("#document2").val(), 
@@ -356,7 +384,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title">`+result[1]+`</h5>
                                                 <p class="card-text"></p>
-                                                <button id="btnBuy" value="`+result[2].c[0]+`" class="btn-success btn-block btn btn-lg">Buy `+result[2].c[0]+` wei (ETH)</button>
+                                                <button id="btnBuy" onClick="buyFunction(`+result[0].c[0]+`,`+result[2].c[0]+`)" value="`+result[2].c[0]+`" class="btn-success btn-block btn btn-lg">Buy `+result[2].c[0]+` wei (ETH)</button>
                                             </div>
                                             </div>
                                         </div>
